# mynah

./: .gitignore  LICENSE  README.md  config.example.toml  installer.iss  mynah.spec  pyproject.toml  requirements.txt  run_mynah.py
.github/workflows/: release.yml  site.yml
mynah/: __init__.py  __main__.py  app.py  cleanup.py  cli.py  components.py  config.py  controller.py  cues.py  hardware.py  hotkey.py  insert.py  lid.py  manifest.json  models.py  multilingual.py  permissions.py  platform_layer.py  recorder.py  settings_window.py  tray.py  wakeword.py  whispercpp_native.py
mynah/assets/: mynah.icns
mynah/transcriber/: __init__.py  base.py  whispercpp_server.py
scripts/: build_wcpp_metal.sh  build_wcpp_vulkan.bat  make_dmg.sh  make_manifest.py  pack_metal.py  pack_vulkan.py  release_notes.py  stage_engines.py
site/: astro.config.mjs  package-lock.json  package.json
site/preview/: hero.js  index.html  styles.css
site/src/content/docs/: troubleshooting.md
site/src/content/docs/get-started/: build-macos.md  build-windows.md  install-macos.md  install.md  run-from-source.md
site/src/content/docs/how-it-works/: architecture.md  privacy.md  wake-word.md  why-whisper-cpp-and-vulkan.md
site/src/content/docs/project/: contributing.md  roadmap.md
site/src/content/docs/reference/: build-whisper-cpp.md  cli.md
site/src/content/docs/using-mynah/: activation.md  cli.md  configuration.md  multilingual.md
site/src/pages/: index.astro
site/src/scripts/: bird-hero.ts
site/src/styles/: landing.css  theme.css
