[project]
name = "mynah"
version = "0.3.0"
description = "Local, GPU-accelerated push-to-talk voice typing (free, open-source)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mykyta Lovygin" }]
dependencies = [
    # ASR engine: whisper.cpp (the single engine). It ships as a prebuilt
    # whisper-server binary + whisper.dll (Vulkan / CUDA / CPU build) provisioned out of
    # band — not a pip package. The cheap LID + VAD the multilingual gate needs bind that
    # same whisper.dll in-process via ctypes (stdlib), so there is no second ASR runtime
    # and no CTranslate2 / nvidia-*-cu12 CUDA wheels to pin.
    # Audio capture + array handling.
    "sounddevice>=0.4",
    "numpy",
    # Global hotkey + keystroke simulation.
    "pynput>=1.7",
    # Clipboard read/write for paste-insertion + restore.
    "pyperclip>=1.8",
    # System-tray UI (Phase 2): tray icon + menu; Pillow draws the mic glyph.
    "pystray>=0.19",
    "Pillow>=9.0",
    # Model manager: GGML weights via the shared Hugging Face cache (dedupes across
    # apps, resumable + sha256-verified). Pulls `requests` for downloads.
    "huggingface_hub>=0.23",
    # TOML reader fallback for Python < 3.11 (tomllib is stdlib from 3.11).
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
mynah = "mynah.cli:main"

[project.urls]
Homepage = "https://github.com/RSRaven/mynah"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mynah*"]

[tool.setuptools.package-data]
mynah = ["assets/*.png", "assets/*.ico", "manifest.json"]
